# referrals_service

./: .black  .dockerignore  .env.sample  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  dump.rdb  pyproject.toml  test.py
config/: celery.py  settings.py  urls.py
referral_cods/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
referral_cods/management/commands/: crc.py
referral_cods/migrations/: 0001_initial.py  0002_initial.py
referrals/: admin.py  apps.py  models.py  urls.py  validators.py
users/: admin.py  models.py  seializers_swagger.py  serializers.py  services.py  tests.py  urls.py  views.py
users/management/commands/: csu.py  cu.py
users/migrations/: 0001_initial.py
